# projeto-final-AED2

./: README.md  main.ipynb  pyproject.toml  trabalho_final_validacao.graphml
.ipynb_checkpoints/: main-checkpoint.ipynb
network/: config.json  data.json
req1/network/: config.json  data.json
req2/network/: data.json
req3/network/: data.json
