[project]
name = "analise-redes-wiki"
version = "0.1.0"
description = "Coletor de dados da Wikipédia para análise de grafos complexos"
authors = [
    {name = "alicefvictorino",email = "alicefvictorino@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.14.1 || >3.14.1"
dependencies = [
    "wikipedia (>=1.4.0,<2.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false